--- a/ig.ini
+++ b/ig.ini
@@ -1,3 +1,3 @@
 [IG]
 ig = fsh-generated/resources/ImplementationGuide-cpg.ceosys.de.json
-template = fhir.base.template#current
+template = #ceosys-template
