--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,7 +3,7 @@
 # │  supported properties, see: https://fshschool.org/docs/sushi/configuration/                    │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: cpg.ceosys.de
-canonical: https://www.ceosys.de
+canonical: https://www.ceosys.de/fhir
 name: Clinical Guideline Recommendations
 status: draft
 version: 0.1.0
