--- a/ceosys-template/package/package.json
+++ b/ceosys-template/package/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "napkon.de.template",
+  "name": "ceosys.de.template",
   "version": "0.0.1",
   "type": "fhir.template",
   "license": "CC0-1.0",
-  "description": "NAPKON template extension for FHIR IG",
-  "author": "NAPKON",
+  "description": "ceosys template extension for FHIR IG",
+  "author": "Gregor Lichtner",
   "base": "fhir.base.template",
   "dependencies": {
     "fhir.base.template": "current",
