--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ node_modules/
 # cache folders
 ###########################
 __pycache__/
+
+# generated files
+###########################
+*-generated.md
