--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ template
 output
 input-cache
 fsh-generated
+_preprocessed
+notes
 
 # IG publisher files #
 ###########################################
