updated gh workflows

--- a/.github/workflows/ig-publish.yml
+++ b/.github/workflows/ig-publish.yml
@@ -29,13 +29,16 @@ jobs:
       - name: Update the image to the latest publisher
         uses: docker://hl7fhir/ig-publisher-base:latest
         with:
-          # Get the latest publisher - don't run the batch script but run the line directly
-          args: curl -L https://github.com/HL7/fhir-ig-publisher/releases/latest/download/publisher.jar -o ./input-cache/publisher.jar --create-dirs
+          args: curl -L https://github.com/CEOsys/fhir-ig-publisher/releases/latest/download/publisher_cli.jar -o ./input-cache/publisher.jar --create-dirs
+
+      - name: Install FHIR R5 CI
+        uses: docker://hl7fhir/ig-publisher-base:latest
+        with:
+          args: ./download-fhir-r5-ci.sh
 
       - name: Run the IG publisher
         uses: docker://hl7fhir/ig-publisher-base:latest
         with:
-          # Run the publisher - don't run the batch script but run the line directly
           args: java -jar ./input-cache/publisher.jar publisher -ig .
 
       # deploy implementation guide to github pages
