--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -34,6 +34,7 @@ menu:
   Profiles: profiles.html
   Code Systems: codesystems.html
   Value Sets: valuesets.html
+  Extensions: extensions.html
   Examples: examples.html
   Downloads: downloads.html
   Change Log: changelog.html
