--- a/.github/workflows/fhir-validate.yml
+++ b/.github/workflows/fhir-validate.yml
@@ -44,5 +44,11 @@ jobs:
       - name: Install fsh-sushi
         run: npm install && npm install -g fsh-sushi
 
+      - name: Load validator
+        run: curl -L https://github.com/CEOsys/org.hl7.fhir.core/releases/latest/download/validator_cli.jar -o ./validator_cli.jar
+
+      - name: Install FHIR R5 CI
+        run: ./download-fhir-r5-ci.sh
+
       - name: Execute validator
         run: fsh-validator --all
