--- a/.github/workflows/ig-publish.yml
+++ b/.github/workflows/ig-publish.yml
@@ -26,20 +26,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Update the image to the latest publisher
-        uses: docker://hl7fhir/ig-publisher-base:latest
-        with:
-          args: curl -L https://github.com/CEOsys/fhir-ig-publisher/releases/latest/download/publisher_cli.jar -o ./input-cache/publisher.jar --create-dirs
-
-      - name: Install FHIR R5 CI
-        uses: docker://hl7fhir/ig-publisher-base:latest
-        with:
-          args: ./download-fhir-r5-ci.sh
-
       - name: Run the IG publisher
         uses: docker://hl7fhir/ig-publisher-base:latest
         with:
-          args: java -jar ./input-cache/publisher.jar publisher -ig .
+          args: ./run-ig-publisher.sh
 
       # deploy implementation guide to github pages
       - name: Deploy
