updated FHIR version to 5.0.0-snapshot; added outcome+net-effect

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -8,7 +8,7 @@ name: Clinical Guideline Recommendations
 title: Clinical Guideline Recommendations
 status: draft
 version: 0.1.0
-fhirVersion: 4.6.0
+fhirVersion: 5.0.0-snapshot1
 copyrightYear: 2021+
 releaseLabel: ci-build
 publisher:
