--- a/input/data/ig.yml
+++ b/input/data/ig.yml
@@ -168,7 +168,7 @@ definition:
     reference:
       reference: ActivityDefinition/InterventionActivity
 fhirVersion:
-- 4.6.0
+- 5.0.0-snapshot1
 id: cpg.ceosys.de
 name: ClinicalGuidelineRecommendations
 packageId: cpg.ceosys.de
